# LearnByEmail

./: .env.example  .gitignore  .replit  .roomodes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  KNOWN_ISSUES.md  README.md  REFACTORING.md  REPLIT_DEPLOYMENT.md  deploy.sh  feature_11_enhanced_content_continuity.md  jobs.sqlite  main.py  migration.py  migration_email_confirmation.py  pyproject.toml  replit.nix  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
app/: __init__.py  main.py
app/api/: auth.py  base_dependencies.py  content_preview.py  subscriptions.py  webhooks.py
app/core/: config.py  csrf.py  env_config.py  error_handler.py  rate_limit.py  security.py
app/db/: base.py  models.py  session.py
app/schemas/: subscription.py  user.py
app/services/: content_generator.py  email_sender.py  scheduler.py  service_factory.py
app/templates/: _csrf_token.html  about.html  base.html  check_email.html  confirm_email.html  contact.html  dashboard.html  index.html  (+12 more)
attached_assets/: Pasted--INFO-Application-startup-complete-2025-03-26-23-54-14-295-app-main-INFO-Shutting-down-a-1743033274760.txt  Pasted--Process-SpawnProcess-1-Traceback-most-recent-call-last-File-nix-store-nb21sc3npfc8gvazwnrjx-1743032755551.txt  Pasted--Traceback-most-recent-call-last-File-nix-store-nb21sc3npfc8gvazwnrjxpvb5d48jysx-python3-3-12-1742939687230.txt  Pasted-INFO-172-31-128-19-53596-POST-subscribe-HTTP-1-1-500-Internal-Server-Error-ERROR-Excep-1742939598718.txt
migrations/: add_email_confirmation_fields.py
tests/: conftest.py
(+17 files in other folders)
