[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = ["sendgrid.*", "apscheduler.*"]
ignore_missing_imports = true

# Ignore specific errors in specific files
[[tool.mypy.overrides]]
module = ["app.main"]
disable_error_code = ["arg-type"]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"